# mnian

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: on-merge.yml  periodic.yml
mncore/: CMakeLists.txt  action.h  app.cc  app.h  clock.h  command.cc  command.h  conv.h  dir.cc  dir.h  editor.h  file.cc  file.h  file_unix.cc  file_win.cc  history.cc  history.h  lang.cc  lang.h  logger.h  node.cc  node.h  serialize.cc  serialize.h  serialize_json.cc  store.h  task.h  version.cc  widget.cc  widget.h
mnian/: CMakeLists.txt  app.cc  app.h  app_lang.cc  app_menu.h  app_panic_popup.h  app_project.h  command.h  dir.h  editor.cc  editor.h  file.cc  file.h  lang.cc  lang.h  logger.h  main.cc  popup_input.cc  popup_input.h  registry.h  widget.cc  widget.h  widget_dir_tree.cc  widget_dir_tree.h  widget_dir_tree_command.h  widget_history_tree.cc  widget_history_tree.h  widget_node_terminal.cc  widget_node_terminal.h  widget_node_terminal_command.h  widget_project_view.cc  widget_project_view.h  worker.cc  worker.h
mnres/: CMakeLists.txt  README.md  all.h  font.cc  lang.cc  lang_english.po  lang_update.sh
mntest/: CMakeLists.txt  action.cc  action.h  app.h  command.cc  command.h  conv.cc  dir.cc  dir.h  file.cc  file.h  history.cc  history.h  lang.cc  logger.cc  logger.h  node.cc  node.h  serialize.cc  serialize.h  store.cc  task.cc  task.h  test.cc  widget.cc
